--- a/index.html
+++ b/index.html
@@ -3,31 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="css/styles.css" rel="stylesheet">
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
+  <div class="card mx-auto shadow-lg">
+      <img src="https://github.com/reeser00/nft-preview-card-component/blob/main/images/image-equilibrium.jpg?raw=true" class="card-img-top img-fluid rounded">
+      <div class="card-body">
+          <h1>Equilibrium #3429</h1>
+          <h5>Our Equilibrium collection promotes balance and calm.</h5>
+          <p><span class="price float-start"><img src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/icon-ethereum.svg?raw=true"> 0.041 ETH</span><span class="time-left float-end"><img src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/icon-clock.svg?raw=true"> 3 days left</span></p><br>
+          <hr>
+          <div>
+              <img class="creator-img" src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/image-avatar.png?raw=true" alt="">
+              <p class="description">Creation of <span class="creator">Jules Wyvern</span></p>
+          </div>
+      </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">reeser00</a>.
   </div>
 </body>
 </html>
