--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </head>
 <body>
   <div class="card mx-auto shadow-lg">
-      <img src="https://github.com/reeser00/nft-preview-card-component/blob/main/images/image-equilibrium.jpg?raw=true" class="card-img-top img-fluid rounded">
+      <img src="/images/image-equilibrium.jpg" class="card-img-top img-fluid rounded">
       <div class="card-body">
           <h1>Equilibrium #3429</h1>
           <h5>Our Equilibrium collection promotes balance and calm.</h5>
-          <p><span class="price float-start"><img src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/icon-ethereum.svg?raw=true"> 0.041 ETH</span><span class="time-left float-end"><img src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/icon-clock.svg?raw=true"> 3 days left</span></p><br>
+          <p><span class="price float-start"><img src="/images/icon-ethereum.svg"> 0.041 ETH</span><span class="time-left float-end"><img src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/icon-clock.svg?raw=true"> 3 days left</span></p><br>
           <hr>
           <div>
-              <img class="creator-img" src="https://github.com/reeser00/nft-preview-card-component/blob/d7d8d4751534985e0466f8562ee738d7afacdec1/images/image-avatar.png?raw=true" alt="">
+              <img class="creator-img" src="/images/image-avatar.png" alt="">
               <p class="description">Creation of <span class="creator">Jules Wyvern</span></p>
           </div>
       </div>
