--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </head>
 <body>
   <div class="card mx-auto shadow-lg">
-      <img src="/images/image-equilibrium.jpg alt="equilibrium" class="card-img-top img-fluid rounded">
+      <img src="images/image-equilibrium.jpg alt="equilibrium" class="card-img-top img-fluid rounded">
       <div class="card-body">
           <h1>Equilibrium #3429</h1>
           <h5>Our Equilibrium collection promotes balance and calm.</h5>
-          <p><span class="price float-start"><img src="/images/icon-ethereum.svg"> 0.041 ETH</span><span class="time-left float-end"><img src="/images/icon-clock.svg" alt="clock"> 3 days left</span></p><br>
+          <p><span class="price float-start"><img src="images/icon-ethereum.svg"> 0.041 ETH</span><span class="time-left float-end"><img src="images/icon-clock.svg" alt="clock"> 3 days left</span></p><br>
           <hr>
           <div>
-              <img class="creator-img" src="/images/image-avatar.png" alt="avatar">
+              <img class="creator-img" src="images/image-avatar.png" alt="avatar">
               <p class="description">Creation of <span class="creator">Jules Wyvern</span></p>
           </div>
       </div>
